fix scroll clipping and rerendering

--- a/app/components/Notes/EntryNav/styles.scss
+++ b/app/components/Notes/EntryNav/styles.scss
@@ -5,6 +5,10 @@
   max-width: $entry-nav-width;
   height: 100vh;
   overflow: auto;
+
+  ul {
+    height: 100%;
+  }
 }
 
 .buttons {
